--- a/src/index.scss
+++ b/src/index.scss
@@ -450,7 +450,7 @@
                     }
                     &:after {
                         display: block;
-                        content: "Click on expand";
+                        content: "查看全文";
                         text-align: center;
                         color: #828586;
                         position: absolute;
